<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:title="@string/app_name"
        app:titleTextColor="@color/white"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_source_currency"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"/>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/source_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:minHeight="48dp"
        android:spinnerMode="dialog" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/source_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_sum_source_currency"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/text_final_currency"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"/>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/final_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:minHeight="48dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/purple_500"
        android:clickable="true"
        android:text="@string/text_ok"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_sum_final_currency"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/final_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp" />

</LinearLayout>